# helloworld

./: .cproject  .gitignore
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld.cpp  test.cpp
src/helloworld/: helloworld.cpp
src/share/: CMakeLists.txt  sayhello.cpp  sayhello.h
